--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "terser": "^5.19.1",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^4.4.4"
   }
 }
